<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_gravity="start"
        android:src="@drawable/rectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in_to_continue"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="38dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/yellow_dark"
            android:padding="5dp"
            android:src="@drawable/ic_person"
            android:tint="@color/yellow" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:fontFamily="sans-serif-light"
            android:hint="@string/username"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="38dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/red_dark"
            android:padding="5dp"
            android:src="@drawable/ic_lock"
            android:tint="@color/red" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:drawableEnd="@drawable/ic_eye_closed"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableTint="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/cyan_dark"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/cyan"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>