<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_gravity="start"
        android:src="@drawable/rectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/cyan"
        android:layout_marginTop="30dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:text="Lorem Ipsum" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnChangeProfile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:drawableEnd="@drawable/ic_profile"
            android:drawablePadding="10dp"
            android:text="@string/change_profile_picture"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableTint="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnChangeUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:drawableEnd="@drawable/ic_at"
            android:drawablePadding="10dp"
            android:text="@string/change_username"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableTint="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:drawableEnd="@drawable/ic_log_out"
            android:drawablePadding="10dp"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableTint="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>