<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".SignupPasswordActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_gravity="start"
        android:src="@drawable/rectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        tools:text="Lorem Ipsum" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="38dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/red_dark"
            android:padding="5dp"
            android:src="@drawable/ic_lock"
            android:tint="@color/red" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:drawableEnd="@drawable/ic_eye_closed"
            android:fontFamily="sans-serif-light"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="38dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/red_dark"
            android:padding="5dp"
            android:src="@drawable/ic_lock"
            android:tint="@color/red" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:drawableEnd="@drawable/ic_eye_closed"
            android:fontFamily="sans-serif-light"
            android:hint="@string/repeat_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/cyan_dark"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_left"
            android:tint="@color/cyan" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rectangle"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_arrow_right"
                android:tint="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>